<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- App level -->
    <string name="api_key">ENTER API KEY</string>
    <string name="app_name">Football Scores</string>
    <string name="action_settings">Settings</string>
    <string name="widget_text">This is a widget probably.</string>

    <!-- Dummy text -->
    <string name="hello_world">Hello world!</string>
    <string name="test_text">Test</string>

    <!-- Navigation -->
    <string name="today">Today</string>
    <string name="yesterday">Yesterday</string>
    <string name="tomorrow">Tomorrow</string>

    <!-- Accessibility -->
    <string name="pager_title_desc">Football Scores App</string>
    <string name="tab1_desc">Tab 1 Recent Football Scores</string>
    <string name="tab2_desc">Tab 2 Today\'s Football Scores</string>
    <string name="tab3_desc">Tab 3 Upcoming Football Matches</string>
    <string name="empty_image_icon">Icon of a cloud</string>
    <string name="detail_league_name">The name of the league</string>
    <string name="detail_match_day">The date ofthe match</string>
    <string name="detail_share_icon">An Icon that denotes sharing of match information</string>

    <!-- Empty Text -->
    <string name="empty_title">No Scores Available</string>
    <string name="empty_copy">Well, look what happened here. We didn\'t find any scores for this day.</string>

    <!-- Pager Fragment -->
    <string name="tab1">Recent</string>
    <string name="tab2">Today</string>
    <string name="tab3">Upcoming</string>

    <!-- Football Labels -->
    <string name="champions_league">UEFA Champions League</string>
    <string name="bundesliga">Bundesliga</string>
    <string name="premierleague">Premier League</string>
    <string name="primeradivison">Primera Division</string>
    <string name="seriaa">Serie A</string>
    <string name="matchday_text">Match day</string>
    <string name="group_stage_text">Group stages</string>
    <string name="first_knockout_round">First knockout round</string>
    <string name="quarter_final">Quarter Final</string>
    <string name="semi_final">Semi Final</string>
    <string name="final_text">Final</string>
    <string name="share_text">Share</string>

    <!-- About Activity -->
    <string name="about">About</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="about_text">
        This Application get Football Matches Score for the Premier League,Seria A,Bundesliga,Primera Division
        and the Uefa Champions League.\n\n
        All Matches data are acquired from football-data.org free API.\n\n
        All team Logos are acquired from http://hdlogo.wordpress.com/ upon requesting permission form the owner.\n\n
        All team Logos are acquired from http://hdlogo.wordpress.com/ upon requesting permission form the owner.\n\n
        The original version of this app was created by Yahia Khalid Ibn El Walid Ahmed, and a modified version is given to students in the Udacity Android Nanodegree program.\n\n
        To report any bugs,or suggestions do not hesitate to send a mail to y.k.ibnelwalid@gmail.com.\n\n
        The \'Cat Fail\' icon was created by Denis Sazhin for the noun project: https://thenounproject.com/search/?q=fail&amp;26i=232266
    </string>

    <!-- Widget -->
    <string name="appwidget_text">Widget</string>
    <string name="add_widget">Add widget</string>
    <string name="widget_title">Matches Today</string>

    <!-- Widget Content Descriptions -->
    <string name="widget_title_desc">Football Scores widget lists matches for the current day.</string>
    <string name="widget_away_team_desc">Away Team</string>
    <string name="widget_home_team_desc">Home Team</string>
    <string name="widget_icon_clock">Icon of a clock to denote the time of a match.</string>
    <string name="widget_icon_ball">Icon of a soccer ball to denote the teams in the match.</string>
    <string name="widget_time">Time of match</string>


    <!-- No Internet Alert -->
    <string name="no_internet_title">No Connection</string>
    <string name="no_internet_body">Your device doesn\'t seem to be connected to the internet. Do you want to check your internet connection?</string>
    <string name="no_internet_positive_button">Ok</string>
    <string name="no_internet_negative_button">Cancel</string>
</resources>
