<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/scree_bg"
    android:orientation="vertical"
    android:padding="@dimen/widget_margin">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/primary"
        android:contentDescription="@string/widget_title_desc"
        android:gravity="center_vertical"
        android:paddingLeft="10dp"
        android:paddingStart="10dp"
        android:text="@string/widget_title"
        android:textColor="@color/title_color"
        android:textStyle="bold" />

    <ListView
        android:id="@+id/widget_list_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:divider="@android:color/transparent"
        android:dividerHeight="10.0sp" />

    <LinearLayout
        android:id="@+id/empty_widget_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/scree_bg"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingTop="20dp">

        <ImageView
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:contentDescription=""
            android:src="@drawable/noun_232266_cc" />

        <TextView
            android:id="@+id/empty_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:paddingTop="10dp"
            android:text="@string/empty_title"
            android:textColor="@color/text_color"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/empt_text_body"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:paddingLeft="5dp"
            android:paddingStart="5dp"
            android:paddingRight="5dp"
            android:paddingEnd="5dp"
            android:paddingTop="15dp"
            android:text="@string/empty_copy"
            android:textColor="@color/text_color"
            android:textSize="15dp" />
    </LinearLayout>

</LinearLayout>